<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/creditsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/credits_title"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.147" />

            <TextView
                android:id="@+id/creditsAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/credits_author_text"
                app:layout_constraintEnd_toEndOf="@+id/creditsTitle"
                app:layout_constraintStart_toStartOf="@+id/creditsTitle"
                app:layout_constraintTop_toBottomOf="@+id/creditsTitle" />

            <TextView
                android:id="@+id/creditsForWho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/credits_for"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/creditsAuthor"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="@+id/creditsAuthor"
                app:layout_constraintTop_toBottomOf="@+id/creditsAuthor" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="161dp"
                android:layout_height="175dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/credits_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/logophilan" />

            <TextView
                android:id="@+id/creditsCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:capitalize="characters"
                android:text="@string/credits_credits"
                android:textAllCaps="true"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/creditsAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Version: "
                app:layout_constraintEnd_toEndOf="@+id/creditsProblems"
                app:layout_constraintStart_toStartOf="@+id/creditsProblems"
                app:layout_constraintTop_toBottomOf="@+id/creditsProblems" />

            <Button
                android:id="@+id/creditsProblems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Probleme?"
                app:layout_constraintEnd_toEndOf="@+id/creditsAuthor"
                app:layout_constraintStart_toStartOf="@+id/creditsAuthor"
                app:layout_constraintTop_toBottomOf="@+id/creditsAuthor" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>