<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNewsActivity">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="354dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/create_news_title"
        android:inputType="textLongMessage|textAutoComplete"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <EditText
        android:id="@+id/editSummary"
        android:layout_width="354dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/create_news_summary"
        android:inputType="textLongMessage|textAutoComplete"
        app:layout_constraintEnd_toEndOf="@+id/editTitle"
        app:layout_constraintStart_toStartOf="@+id/editTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <EditText
        android:id="@+id/editContent"
        android:layout_width="354dp"
        android:layout_height="79dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/create_news_content"
        android:inputType="textLongMessage|textMultiLine|textImeMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editSummary"
        app:layout_constraintStart_toStartOf="@+id/editSummary"
        app:layout_constraintTop_toBottomOf="@+id/editSummary" />

    <Button
        android:id="@+id/editNewsButton"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:lines="3"
        android:text="News aktualisieren"
        app:layout_constraintEnd_toEndOf="@+id/editContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editContent"
        app:layout_constraintTop_toBottomOf="@+id/editContent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFCA3B3B"
        android:capitalize="characters"
        android:fadingEdge="horizontal|vertical"
        android:text="Löschen"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewsButton"
        app:layout_constraintVertical_bias="0.67" />

</androidx.constraintlayout.widget.ConstraintLayout>